--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,9 +12,14 @@
     <string name="login_failed">"Login failed"</string>
     <string name="sign_up">Sign Up</string>
     <string name="user">User</string>\
-    <string-array name ="jk">
+    <!-- <string name="pref_file">com.example.har.preference_file</string>
+    <string name="pref_login_status">com.example.har.preference_login_status</string>
+    <string name="pref_user_name">com.example.har.preference_user_name</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string> -->
+    <!-- TODO: Remove or change this placeholder text -->
+    <string-array name="jk">
         <item>Perempuan</item>
         <item>Laki-laki</item>
     </string-array>
-    <string name="pref_file">com.ab</string>
 </resources>
+
